dawarich/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich-redis
spec:
  selector:
    app: dawarich-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich
spec:
  selector:
    app: dawarich
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dawarich
  namespace: default
spec:
  gateways: [istio-system/gateway]
  hosts: [dawarich.local.ongy.net]
  http:
  - route:
    - destination:
        host: dawarich.experiments.svc.cluster.local
